force-app/main/default/objects/LLC_BI__Product_Program_Field_Mapping__c/LLC_BI__Product_Program_Field_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Product Program Field Mapping</label>
</CustomObject>