force-app/main/default/objects/LLC_BI__Product_Program_Field_Mapping__c/fields/LLC_BI__Context_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Object_Name__c</fullName>
    <description>This field is currently not used because the product program selector feature is not being used. Provides the object API name in context.</description>
    <label>Context Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>