force-app/main/default/objects/LLC_BI__Product_Program_Field_Mapping__c/fields/LLC_BI__Program_Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Program_Attribute_Name__c</fullName>
    <description>This field is currently not used because the product program selector feature is not being used. Defines an attribute name that associates the product program with field mapping.</description>
    <label>Program Attribute Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>