force-app/main/default/objects/LLC_BI__Product_Program_Field_Mapping__c/fields/LLC_BI__Root_Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Root_Object_Field_Name__c</fullName>
    <description>This field is currently not used because the product program selector feature is not in use. The API name of the id of the root object relative to the context object. If not set, it defaults to the API name of the root object.</description>
    <label>Root Object Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>